# Training_Kayanyazisaat

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  kayanyazi Debug.launch  kayanyazi.ioc
.github/workflows/: BuildEmulator.yml
Core/Src/: main.c  stm32f3xx_hal_msp.c
Drivers/gpio/: CMakeLists.txt  project.yml
Drivers/gpio/client/: gpio.c
Drivers/gpio/inc/: gpio_if.h
Drivers/gpio/src/: gpio.c
docs/: Readme.MD  simple_design.puml
drivers/RHTDriver/: RHTDriver.c  RHTDriver.h
emulators/: .project  .pydevproject  .pylintrc  main.py
emulators/gpio/: gpio_emulator.py
emulators/source/: .pylintrc  main.py
emulators/source/EmulatorBase/: __init__.py  emulator_base.py
emulators/source/GpioEmulator/: __init__.py  gpio_emulator.py
environment/native/: system.cmake
projects/gcc_host/: ky_socket.c  main.c
projects/gcc_host/clients/: client_gpio.c
projects/gcc_host/inc/: ky_socket_if.h
